[project]
name = "typeguard-annotatedtypes-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gilad Barnea", email = "giladbrn@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "annotated-types>=0.7.0",
    "typeguard>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "pdbr>=0.8.9",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "ruff>=0.8.0",
]
